<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PalmPay_demo_v4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="index_introduce">내 손 안에서\n이루어지는\n편리한 주문 결제</string>

    <!--회원가입-->
    <string name="ID">아이디 (이메일)</string>
    <string name="ID_signup">아이디 (쿠폰을 받을 "이메일")</string>
    <string name="PASSWORD">비밀번호</string>
    <string name="PASSWORD_signup">비밀번호(8~16자 대소문자, 숫자)</string>
    <string name="PASSWORD_check">비밀번호 확인</string>
    <string name="PHONE">전화번호</string>
    <string name="NAME">이름 (실명)</string>
    <string name="NICKNAME">닉네임 (주문자 식별에 사용됩니다.)</string>
    <string name="SEX">성별</string>
    <!--이용약관-->
    <string name="AGREE_CONTENT">이용약관</string>
    <string name="AGREE_GRANT">이용 약관에 동의합니다.</string>

    <!--Activity Main Drawer-->
    <string name="coupon">쿠폰함</string>
    <string name="orderedlist">내 주문내역</string>
    <string name="info">PalmPay 정보</string>
    <string name="contact">문의하기</string>
    <string name="team">팀 참여하기</string>

    <!-- 메인 화면 -->
    <string name="palmorder">PALM 빠른 오더</string>
    <string name="normalorder">일반 주문</string>

    <!-- 권한 화면 -->
    <string name="permission_checking">권한 확인중...</string>
    <string name="permission_setting_title">권한 설정</string>
    <string name="permission_setting_message">앱을 실행하기 위해서는 권한 설정을 해야 합니다!</string>
    <string name="permission_setting_restart">권한을 설정하고 다시 실행해주세요!</string>

    <!--now orderlist fragment-->
    <string name="now_orderlist_title">장바구니</string>

    <!--RecyclerView Items-->
    <!--item_partner_list-->
    <string name="partner_name">상호명</string>
    <string name="partner_type">업종분류</string>
    <string name="partner_desc">간략한 소개를 하는 입력란입니다. 30자 내외로 상호명에 대한 내용을 간략히 소</string>

    <!--item_order_list-->
    <string name="order_name">\@메뉴명</string>
    <string name="order_each_price">\@단가</string>
    <string name="order_count">\@수량</string>
    <string name="order_total_price">\@총가격</string>

    <!--item_menu_list-->
    <string name="menu_name">\@메뉴명</string>
    <string name="menu_price">\@단가</string>
    <string name="menu_count">\@수량</string>

    <!--item_myordered_list-->
    <string name="ordered_title">나의 주문 내역</string>
    <string name="ordered_store_name">\@상호명</string>
    <string name="ordered_time">\@2000-01-01 12:00</string>
    <string name="ordered_menu_name">\@메뉴 이름</string>
    <string name="ordered_count">\@주문 수량</string>
    <string name="ordered_paytype">\@지불 수단</string>
    <string name="ordered_price">\@총 금액</string>

    <string name="ordered_now_list">현재 주문 내역</string>
    <string name="ordered_past_list">지난 주문 내역</string>


    <!-- 공통 -->
    <string name="skip_string">...</string>
    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="checknetwork">Wifi/LTE 연결을 확인하세요</string>

    <!--기타 장문 -->
    <string name="withme">손 안에서 더 편리한 일들을 할 수 있게 하는 서비스 개발을 목표로 하는 팀 PalmApps입니다.\n 우리 팀의 첫 번째 관심사는 Mobile Payment와 Kiosk 입니다. 지금은 프로토타입을 테스트하는 단계이지만, 아직 이것은 시작에 불과합니다. 우리에게는 더 큰 목표가 있습니다.\n
스티브 잡스, 래리 페이지, 제프 베조스 등 다양한 IT기업의 창업자들은 차고(Garage)에서 시작하여 스마트폰, 검색엔진, 클라우드 서비스 각 분야에서 세계 최고의 기업을 만들어 냈습니다. 우리 팀이 바로 그 차고(Garage)가 될것 입니다.\n
우리는 지금보다 더 다양한 구성원으로 이루어진 팀으로 발전해 나가길 원하고 있습니다. 기획자, 개발자, 디자이너 등 다양한 구성원이 만들어내는 시너지는 누구도 무시할 수 없습니다. 우리 팀과 함께하고 싶은 분들은 다음 항목들을 채워 아래의 전달하기 버튼을 클릭해주시면 별도의 연락을 드리겠습니다.
</string>
    <string name="appinfo">이름 : PalmPay(팜페이)\n
버전 : 0.4.1_beta\n
만든이 : 권민철\nGitHub : github.com/MrKwon
</string>
</resources>
