<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyOrderedActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/ordered_title"
        android:textSize="@dimen/xlarge_text"
        android:textColor="@color/black"
        android:gravity="center"/>

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/header"
        android:layout_marginRight="@dimen/margin_08"
        android:layout_marginLeft="@dimen/margin_08"
        android:background="#D8D8D8"/>

    <LinearLayout
        android:id="@+id/selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:paddingRight="@dimen/margin_16"
        android:paddingLeft="@dimen/margin_16"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ordered_now_list"
            android:background="@drawable/btn_myorder_unactivate"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ordered_past_list"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/selector">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/myOrdered"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>