<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_basic_white_stroke_grey"
    card:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ordered_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ordered_store_name"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:gravity="center"/>
            <TextView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#888888"/>

            <TextView
                android:id="@+id/ordered_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_04"
                android:layout_marginRight="@dimen/margin_04"
                android:layout_gravity="center"
                android:text="@string/ordered_time"
                android:textSize="@dimen/small_text"
                android:gravity="center" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888"/>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/white">

                <TextView
                    android:id="@+id/ordered_menu_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ordered_menu_name"
                    android:textSize="@dimen/medium_text"
                    android:textColor="@color/black"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/ordered_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_04"
                    android:text="@string/ordered_count"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#888888"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ordered_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_credit_on_purple_24dp"/>

                <TextView
                    android:id="@+id/ordered_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ordered_price"
                    android:textSize="@dimen/medium_text"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>