<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/order_img"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_04"
        android:src="@drawable/ic_photo_black_24dp"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_04"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_04"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_name"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/order_each_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/order_each_price"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_04"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_count"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/order_total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/order_total_price"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/order_delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_gravity="center"
        android:background="@drawable/bg_basic_red"
        android:src="@drawable/ic_clear_black_24dp"/>

</LinearLayout>