<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_basic_white_stroke_grey">

    <LinearLayout
        android:id="@+id/item_partner_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/partner_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="@dimen/margin_16"
            android:src="@drawable/ic_photo_black_24dp"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_04"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/partner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/partner_name"
                    android:textSize="@dimen/medium_text"
                    android:textColor="@color/black"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/partner_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:text="@string/partner_type"
                    android:textSize="@dimen/small_text"
                    android:gravity="center"/>


            </LinearLayout>

            <TextView
                android:id="@+id/partner_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/partner_desc"
                android:textSize="@dimen/small_text"
                android:textColor="@color/black"
                android:maxLines="2"
                android:lineSpacingExtra="4dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>